--- a/app/views/junior-content-designer.html
+++ b/app/views/junior-content-designer.html
@@ -17,7 +17,7 @@
 
       <form class="form" action="/url/of/next/page" method="post">
 
-        <p>[Insert question content here]</p>
+        <p>Testing content</p>
 
         <p>[See <a href="https://design-system.service.gov.uk">the GOV.UK Design System</a> for examples]</p>
 
